# ai-agent

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 080e2cf80557_add_airports_table_and_foreign_keys.py  0d4018d1bbaf_initial_migration.py  520c6de34aaa_fix_airports_table_and_fk.py  a8f49162d4d7_create_conversations_and_messages_tables.py  c3449aa5cb5b_add_origin_destination_columns.py  e50e441bfedf_insert_bulk_data_to_flight_price_table.py
api/: config.py
api/chatbot/: interface.py  repositories.py  schemas.py  service.py  services.py  views.py
api/conversations/: entities.py  helpers.py  interface.py  models.py  repositories.py  schemas.py  services.py  views.py
api/database/: base.py  client.py  database.py
api/flights/: interface.py  models.py  repositories.py  schemas.py  services.py  views.py
api/helpers/: generators.py
api/langchain_pg/: models.py
api/models/: base.py
