[project]
name = "ai-agent-gogo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.2",
    "fastapi>=0.115.13",
    "greenlet>=3.2.3",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-openai>=0.3.25",
    "openai>=1.90.0",
    "pandas>=2.3.0",
    "pgvector>=0.4.1",
    "psycopg>=3.2.9",
    "psycopg-binary>=3.2.9",
    "sqlalchemy>=2.0.41",
    "tiktoken>=0.9.0",
    "uvicorn>=0.34.3",
]
